# parallel-pi-estimator

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  executor.sh
includes/: PiCalculator.h
src/: PiCalculator.cpp  main.cpp
